--- a/SpringMVCDemoCloud/src/main/webapp/index.html
+++ b/SpringMVCDemoCloud/src/main/webapp/index.html
@@ -6,16 +6,17 @@
   </head>
 
   <body>
-    <h1>Choose the Operations</h1>
+    <h1>Choose the Operation</h1>
 <form action="login">
   Number1 <input type="text" name="no1"/>
   Number2 <input type="text" name="no2"/>
   <input type="submit" value="Submit"/>
  
   </form>
-  <form action="loginpage">
+  <form action="loginPage">
   User <input type="text" name="user"/>
   Password <input type="text" name="password"/>
+  <input type="submit" value="submit"/>
   </form>
 
   </body>
