--- a/SpringMVCDemoCloud/src/main/webapp/index.html
+++ b/SpringMVCDemoCloud/src/main/webapp/index.html
@@ -18,6 +18,6 @@
   Password <input type="text" name="password"/>
   <input type="submit" value="submit"/>
   </form>
-
+Sample Git code added! Please delete..
   </body>
 </html>
